# PDF-Dark-Mode

./: .gitignore  LICENSE  README.md  compare.py  environment.yml  parse.c  parse.cp39-win_amd64.pyd  parse.pyx  pdf.py  pdfdarkmode_noGUI.py  pyproject.toml  pyvenv.cfg  requirements.txt  setup.py
PdfDarkMode/: pdf.py
Scripts/: Activate.ps1  activate  activate.bat
src/PdfDarkMode/: darkmode.py  pdf.py
